added list with no styles

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="/macherioo.css">
-    <title>Materiolze</title>
+    <title>Macherioo</title>
 </head>
 <body>
     
@@ -21,6 +21,13 @@
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Exercitationem, adipisci necessitatibus. Quas ab dicta et temporibus <br > 
         repellendus dolores quam corporis cumque voluptatibus doloremque reprehenderit vero minus, eius rerum. Praesentium, nisi!
     </p>
+
+    <ul>
+        <li>Hello World</li>
+        <li>Hello World</li>
+        <li>Hello World</li>
+        <li>Hello World</li>
+    </ul>
 
     <h1>Cards</h1>
     
