fixed badges, still adding more, fixed html header

--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/materiolze.css">
-    <title>Materiolze</title>
+    <link rel="stylesheet" href="/macherioo.css">
+    <title>Macherioo</title>
 </head>
 <body>
     
@@ -47,7 +47,9 @@
         </div>
     </nav>
 
-    <div class="badge"></div>
+    <br>
+    <br>
+    <div class="badge">Badge</div>
 
 </body>
 </html>
