added f-right to navbar

--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
     <nav>
         <div class="wrapping">
             <a href="#!" class="logo">Logo</a>
-            <ul class="right">
+            <ul class="f-right">
                 <li><a href="#">Home</a></li>
                 <li><a href="#">About</a></li>
                 <li><a href="#">Contact</a></li>
