--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
     <br>
     <br>
     <div class="badge">Badge</div>
-
+    <div class="badge">Badge<span class="badge-input">9</span></div>
     <div class="badge-outline">Badge Outline</div>
 </body>
 </html>
